--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ header{
     display: flex;
     flex-direction: column;
     background-color: #9b4320;
-    height: 10vh;
+  /*  height: 10vh; */
 }
 
 
