--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li class="navList"><a class="navLink about" href="#about-us">about</a></li>
           <li class="navList"><a class="navLink contact" href="#contact-us">contact</a></li>
           <li class="navList"><a class="navLink social" href="#social-links">social</a></li>
-          <li class="navList"><a class="navLink resume" href="#">resume</a></li>
+          <li class="navList"><a class="navLink resume" href="#resume">resume</a></li>
           <li class="navList"><a class="navLink blog" href="#">blogs</a></li>
         </ul>
       </div>
@@ -43,7 +43,6 @@
       <!-- <a href="#" class="btn btn-dark">my work demo</a> -->
       <a href="#" class="btn btn-light">hire me</a>
     </section>
-
     <section class="sec-2" id="about-us">
       <div class="sec-2-head">
         <h2 class="heading-line">what makes us a special agency</h2>
@@ -84,6 +83,15 @@
         <p class="p-context">we allow clients multiple choices and multipe changes.</p>
       </div>
     </section>
+
+    <section class="sec-resume" id="resume">
+      <div class="resume-card">
+        <h2>My Resume</h2>
+        <p class="p-context">hi, i'm numan ahmed chowdhury a bca graduate in the year of 2021. I am a front-end web developer and ui ux designer.</p>
+        <a href="#">- Download Resume -</a>
+      </div>
+    </section>
+
     <section class="sec-contact" id="contact-us">
       <h1>contact us</h1>
         <div class="contact-content">
