--- a/index.html
+++ b/index.html
@@ -46,41 +46,27 @@
     <section class="sec-2" id="about-us">
       <div class="sec-2-head">
         <h2 class="heading-line">what makes us a special agency</h2>
-        <p class="p-context">we create best mobile-friendly products for our clients. we charge affordable price for the
+        <p class="p-context about-content">we create best mobile-friendly products for our clients. we charge affordable price for the
           product as compare to others. we try our best to full fill clients demands. we provide free service for 6
           months</p>
       </div>
       <div class="box-1 box-card">
-        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-cpu-fill"
-          viewBox="0 0 16 16">
-          <path d="M6.5 6a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z" />
-          <path
-            d="M5.5.5a.5.5 0 0 0-1 0V2A2.5 2.5 0 0 0 2 4.5H.5a.5.5 0 0 0 0 1H2v1H.5a.5.5 0 0 0 0 1H2v1H.5a.5.5 0 0 0 0 1H2v1H.5a.5.5 0 0 0 0 1H2A2.5 2.5 0 0 0 4.5 14v1.5a.5.5 0 0 0 1 0V14h1v1.5a.5.5 0 0 0 1 0V14h1v1.5a.5.5 0 0 0 1 0V14h1v1.5a.5.5 0 0 0 1 0V14a2.5 2.5 0 0 0 2.5-2.5h1.5a.5.5 0 0 0 0-1H14v-1h1.5a.5.5 0 0 0 0-1H14v-1h1.5a.5.5 0 0 0 0-1H14v-1h1.5a.5.5 0 0 0 0-1H14A2.5 2.5 0 0 0 11.5 2V.5a.5.5 0 0 0-1 0V2h-1V.5a.5.5 0 0 0-1 0V2h-1V.5a.5.5 0 0 0-1 0V2h-1V.5zm1 4.5h3A1.5 1.5 0 0 1 11 6.5v3A1.5 1.5 0 0 1 9.5 11h-3A1.5 1.5 0 0 1 5 9.5v-3A1.5 1.5 0 0 1 6.5 5z" />
-        </svg>
-        <h2>High quality</h2>
-        <p class="p-context">we provide high quality products as per client's demand</p>
+        <h2 class="box-tittle">High quality</h2>
+        <div class="box-body">
+        <p class="p-context box-content">we provide high quality products as per client's demand</p>
+      </div>
       </div>
       <div class="box-2 box-card">
-        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-collection-play"
-          viewBox="0 0 16 16">
-          <path
-            d="M2 3a.5.5 0 0 0 .5.5h11a.5.5 0 0 0 0-1h-11A.5.5 0 0 0 2 3zm2-2a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 0-1h-7A.5.5 0 0 0 4 1zm2.765 5.576A.5.5 0 0 0 6 7v5a.5.5 0 0 0 .765.424l4-2.5a.5.5 0 0 0 0-.848l-4-2.5z" />
-          <path
-            d="M1.5 14.5A1.5 1.5 0 0 1 0 13V6a1.5 1.5 0 0 1 1.5-1.5h13A1.5 1.5 0 0 1 16 6v7a1.5 1.5 0 0 1-1.5 1.5h-13zm13-1a.5.5 0 0 0 .5-.5V6a.5.5 0 0 0-.5-.5h-13A.5.5 0 0 0 1 6v7a.5.5 0 0 0 .5.5h13z" />
-        </svg>
-        <h2>cool animation</h2>
-        <p class="p-context">we add best high quality cool animations on site</p>
+        <h2 class="box-tittle">cool animation</h2>
+        <div class="box-body">
+        <p class="p-context box-content">we add best high quality cool animations on site</p>
+      </div>
       </div>
       <div class="box-3 box-card">
-        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-pencil-square"
-          viewBox="0 0 16 16">
-          <path
-            d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-          <path fill-rule="evenodd"
-            d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
-        </svg>
-        <h2>easy to change</h2>
-        <p class="p-context">we allow clients multiple choices and multipe changes.</p>
+        <h2 class="box-tittle">easy to change</h2>
+        <div class="box-body">
+        <p class="p-context box-content">we allow clients multiple choices and multipe changes.</p>
+      </div>
       </div>
     </section>
 
